@@ -9,7 +9,7 @@ $Foswiki::cfg{PubUrlPath} = '/foswiki/pub';
 $Foswiki::cfg{PubDir} = '/var/lib/foswiki/pub';
 $Foswiki::cfg{TemplateDir} = '/var/lib/foswiki/templates';
 $Foswiki::cfg{Site}{CharSet} = 'iso-8859-15';
-$Foswiki::cfg{LoginManager} = 'Foswiki::LoginManager::ApacheLogin';
+$Foswiki::cfg{LoginManager} = 'Foswiki::LoginManager::TemplateLogin';
 $Foswiki::cfg{Plugins}{WysiwygPlugin}{Enabled} = 1;
 $Foswiki::cfg{RCS}{WorkAreaDir} = '/var/lib/foswiki/working/work_area';
 $Foswiki::cfg{TempfileDir} = '/var/lib/foswiki/working/tmp';
@@ -17,6 +17,8 @@ $Foswiki::cfg{WorkingDir} = '/var/lib/foswiki/working';
 $Foswiki::cfg{SafeEnvPath} = '/usr/bin:/bin';
 $Foswiki::cfg{Register}{EnableNewUserRegistration} = 1;
 $Foswiki::cfg{EnableEmail} = 0; 
+$Foswiki::cfg{WebMasterEmail} = 'WEBMASTEREMAIL';
+$Foswiki::cfg{Password} = 'PASSWORD';
 
 $Foswiki::cfg{LogDir} = '/var/log/foswiki';
 $Foswiki::cfg{ConfigurationLogName} = '$Foswiki::cfg{LogDir}/configurationlog.txt';
