@@ -15,75 +15,6 @@
 # BrowserMatchNoCase ^SiteSucker blockAccess
 # BrowserMatchNoCase ^$ blockAccess
 
-BrowserMatchNoCase ^Accoona blockAccess
-BrowserMatchNoCase ^ActiveAgent blockAccess
-BrowserMatchNoCase ^Attache blockAccess
-BrowserMatchNoCase BecomeBot blockAccess
-BrowserMatchNoCase ^bot blockAccess
-BrowserMatchNoCase Charlotte/ blockAccess
-BrowserMatchNoCase ^ConveraCrawler blockAccess
-BrowserMatchNoCase ^CrownPeak-HttpAgent blockAccess
-BrowserMatchNoCase ^EmailCollector blockAccess
-BrowserMatchNoCase ^EmailSiphon blockAccess
-BrowserMatchNoCase ^e-SocietyRobot blockAccess
-BrowserMatchNoCase ^Exabot blockAccess
-BrowserMatchNoCase ^FAST blockAccess
-BrowserMatchNoCase ^FDM blockAccess
-BrowserMatchNoCase ^GetRight/6.0a blockAccess
-BrowserMatchNoCase ^GetWebPics blockAccess
-BrowserMatchNoCase ^Gigabot blockAccess
-BrowserMatchNoCase ^gonzo1 blockAccess
-BrowserMatchNoCase ^Google\sSpider blockAccess
-BrowserMatchNoCase ^ichiro blockAccess
-BrowserMatchNoCase ^ie_crawler blockAccess
-BrowserMatchNoCase ^iGetter blockAccess
-BrowserMatchNoCase ^IRLbot blockAccess
-BrowserMatchNoCase Jakarta blockAccess
-BrowserMatchNoCase ^Java blockAccess
-BrowserMatchNoCase ^KrakSpider blockAccess
-BrowserMatchNoCase ^larbin blockAccess
-BrowserMatchNoCase ^LeechGet blockAccess
-BrowserMatchNoCase ^LinkWalker blockAccess
-BrowserMatchNoCase ^Lsearch blockAccess
-BrowserMatchNoCase ^Microsoft blockAccess
-BrowserMatchNoCase ^MJ12bot blockAccess
-BrowserMatchNoCase MSIECrawler blockAccess
-BrowserMatchNoCase ^MSRBOT blockAccess
-BrowserMatchNoCase ^noxtrumbot blockAccess
-BrowserMatchNoCase ^NutchCVS blockAccess
-BrowserMatchNoCase ^RealDownload blockAccess
-BrowserMatchNoCase ^Rome blockAccess
-BrowserMatchNoCase ^Roverbot blockAccess
-BrowserMatchNoCase ^schibstedsokbot blockAccess
-BrowserMatchNoCase ^Seekbot blockAccess
-BrowserMatchNoCase ^SiteSnagger blockAccess
-BrowserMatchNoCase ^SiteSucker blockAccess
-BrowserMatchNoCase ^Snapbot blockAccess
-BrowserMatchNoCase ^sogou blockAccess
-BrowserMatchNoCase ^SpiderKU blockAccess
-BrowserMatchNoCase ^SpiderMan blockAccess
-BrowserMatchNoCase ^Squid blockAccess
-BrowserMatchNoCase ^Teleport blockAccess
-BrowserMatchNoCase ^User-Agent\: blockAccess
-BrowserMatchNoCase VoilaBot blockAccess
-BrowserMatchNoCase ^voyager blockAccess
-BrowserMatchNoCase ^W3C blockAccess
-BrowserMatchNoCase ^w3search blockAccess
-BrowserMatchNoCase ^Web\sDownloader blockAccess
-BrowserMatchNoCase ^WebCopier blockAccess
-BrowserMatchNoCase ^WebDevil blockAccess
-BrowserMatchNoCase ^WebSec blockAccess
-BrowserMatchNoCase ^WebVac blockAccess
-BrowserMatchNoCase ^Webwhacker blockAccess
-BrowserMatchNoCase ^Webzip blockAccess
-BrowserMatchNoCase ^Wells blockAccess
-BrowserMatchNoCase ^WhoWhere blockAccess
-BrowserMatchNoCase www\.netforex\.org blockAccess
-BrowserMatchNoCase ^WX_mail blockAccess
-BrowserMatchNoCase ^yacybot blockAccess
-BrowserMatchNoCase ^ZIBB blockAccess
-BrowserMatchNoCase ^$ blockAccess
-
 RedirectMatch /foswiki/?$ /cgi-bin/foswiki/view$1
 RedirectMatch /foswiki(/([A-Z].*)?)?$ /cgi-bin/foswiki/view$1
 
@@ -93,8 +24,6 @@ RedirectMatch /foswiki(/([A-Z].*)?)?$ /cgi-bin/foswiki/view$1
 
 #RewriteRule ^configure$ /bin/configure
 #RewriteRule ^([A-Z].*) /bin/view/$1 [PT] [L]
-
-
 
 # The ScriptAlias defines the bin directory as a directory where CGI
 # scripts are allowed.
@@ -143,9 +72,9 @@ SetEnvIf Request_URI "foswiki/pub/System/.*\.[hH][tT][mM][lL]?$" !blockAccess
 # When using Apache type login the following defines the Foswiki scripts
 # that makes Apache ask the browser to authenticate. It is correct that
 # scripts such as view are not authenticated.
-<FilesMatch "(attach|edit|manage|rename|save|upload|mail|logon|rest|.*auth).*">
-	require valid-user
-</FilesMatch>
+#<FilesMatch "(attach|edit|manage|rename|save|upload|mail|logon|rest|.*auth).*">
+#	require valid-user
+#</FilesMatch>
 
 </Directory>
 
